added more icons

--- a/index.html
+++ b/index.html
@@ -242,130 +242,82 @@
             signout: '\uf08b',
             pushpin: '\uf08d',
             externalLink: '\uf08e',
+            signin: '\uf090',
+            trophy: '\uf091',
+            githubSign: '\uf092',
+            uploadAlt: '\uf093',
+            lemon: '\uf094',
+            phone: '\uf095',
+            checkEmpty: '\uf096',
+            bookmarkEmpty: '\uf097',
+            phoneSign: '\uf098',
+            twitter: '\uf099',
+            facebook: '\uf09a',
+            github: '\uf09b',
+            unlock: '\uf09c',
+            creditCard: '\uf09d',
+            rss: '\uf09e',
+            hdd: '\uf0a0',
+            bullhorn: '\uf0a1',
+            bell: '\uf0a2',
+            certificate: '\uf0a3',
+            handRight: '\uf0a4',
+            handLeft: '\uf0a5',
+            handUp: '\uf0a6',
+            handDown: '\uf0a7',
+            globe: '\uf0ac',
+            wrench: '\uf0ad',
+            tasks: '\uf0ae',
+            filter: '\uf0b0',
+            briefcase: '\uf0b1',
+            fullscreen: '\uf0b2',
+            group: '\uf0c0',
+            link: '\uf0c1',
+            cloud: '\uf0c2',
+            beaker: '\uf0c3',
+            paperClip: '\uf0c6',
+            signBlank: '\uf0c8',
+            magic: '\uf0d0',
+            truck: '\uf0d1',
+            pinterest: '\uf0d2',
+            pinterestSign: '\uf0d3',
+            googlePlusSign: '\uf0d4',
+            googlePlus: '\uf0d5',
+            money: '\uf0d6',
+            envelopeAlt: '\uf0e0',
+            undo: '\uf0e2',
+            legal: '\uf0e3',
+            dashboard: '\uf0e4',
+            commentAlt: '\uf0e5',
+            commentsAlt: '\uf0e6',
+            bolt: '\uf0e7',
+            sitemap: '\uf0e8',
+            umbrella: '\uf0e9',
+            lightbulb: '\uf0eb',
+            cloudDownload: '\uf0ed',
+            cloudUpdload: '\uf0ee',
+            userMd: '\uf0f0',
+            stethoscope: '\uf0f1',
+            suitcase: '\uf0f2',
+            bellAlt: '\uf0f3',
+            coffee: '\uf0f4',
+            food: '\uf0f5',
+            fileAlt: '\uf0f6',
+            building: '\uf0f7',
+            hospital: '\uf0f8',
+            ambulance: '\uf0f9',
+            medkit: '\uf0fa',
+            fighterJet: '\uf0fb',
+            beer: '\uf0fc',
+            hSign: '\uf0fd',
+            desktop: '\uf108',
+            laptop: '\uf109',
+            tablet: '\uf10a',
+            mobilePhone: '\uf10b',
+            spinner: '\uf110',
+            reply: '\uf112',
+            githubAlt: '\uf113'
         };
-
-        // .icon-signin:before               { content: "\uf090"; }
-        // .icon-trophy:before               { content: "\uf091"; }
-        // .icon-github-sign:before          { content: "\uf092"; }
-        // .icon-upload-alt:before           { content: "\uf093"; }
-        // .icon-lemon:before                { content: "\uf094"; }
-        // .icon-phone:before                { content: "\uf095"; }
-        // .icon-check-empty:before          { content: "\uf096"; }
-        // .icon-bookmark-empty:before       { content: "\uf097"; }
-        // .icon-phone-sign:before           { content: "\uf098"; }
-        // .icon-twitter:before              { content: "\uf099"; }
-        // .icon-facebook:before             { content: "\uf09a"; }
-        // .icon-github:before               { content: "\uf09b"; }
-        // .icon-unlock:before               { content: "\uf09c"; }
-        // .icon-credit-card:before          { content: "\uf09d"; }
-        // .icon-rss:before                  { content: "\uf09e"; }
-
-        // .icon-hdd:before                  { content: "\uf0a0"; }
-        // .icon-bullhorn:before             { content: "\uf0a1"; }
-        // .icon-bell:before                 { content: "\uf0a2"; }
-        // .icon-certificate:before          { content: "\uf0a3"; }
-        // .icon-hand-right:before           { content: "\uf0a4"; }
-        // .icon-hand-left:before            { content: "\uf0a5"; }
-        // .icon-hand-up:before              { content: "\uf0a6"; }
-        // .icon-hand-down:before            { content: "\uf0a7"; }
-        // .icon-circle-arrow-left:before    { content: "\uf0a8"; }
-        // .icon-circle-arrow-right:before   { content: "\uf0a9"; }
-        // .icon-circle-arrow-up:before      { content: "\uf0aa"; }
-        // .icon-circle-arrow-down:before    { content: "\uf0ab"; }
-        // .icon-globe:before                { content: "\uf0ac"; }
-        // .icon-wrench:before               { content: "\uf0ad"; }
-        // .icon-tasks:before                { content: "\uf0ae"; }
-
-        // .icon-filter:before               { content: "\uf0b0"; }
-        // .icon-briefcase:before            { content: "\uf0b1"; }
-        // .icon-fullscreen:before           { content: "\uf0b2"; }
-
-        // .icon-group:before                { content: "\uf0c0"; }
-        // .icon-link:before                 { content: "\uf0c1"; }
-        // .icon-cloud:before                { content: "\uf0c2"; }
-        // .icon-beaker:before               { content: "\uf0c3"; }
-        // .icon-cut:before                  { content: "\uf0c4"; }
-        // .icon-copy:before                 { content: "\uf0c5"; }
-        // .icon-paper-clip:before           { content: "\uf0c6"; }
-        // .icon-save:before                 { content: "\uf0c7"; }
-        // .icon-sign-blank:before           { content: "\uf0c8"; }
-        // .icon-reorder:before              { content: "\uf0c9"; }
-        // .icon-list-ul:before              { content: "\uf0ca"; }
-        // .icon-list-ol:before              { content: "\uf0cb"; }
-        // .icon-strikethrough:before        { content: "\uf0cc"; }
-        // .icon-underline:before            { content: "\uf0cd"; }
-        // .icon-table:before                { content: "\uf0ce"; }
-
-        // .icon-magic:before                { content: "\uf0d0"; }
-        // .icon-truck:before                { content: "\uf0d1"; }
-        // .icon-pinterest:before            { content: "\uf0d2"; }
-        // .icon-pinterest-sign:before       { content: "\uf0d3"; }
-        // .icon-google-plus-sign:before     { content: "\uf0d4"; }
-        // .icon-google-plus:before          { content: "\uf0d5"; }
-        // .icon-money:before                { content: "\uf0d6"; }
-        // .icon-caret-down:before           { content: "\uf0d7"; }
-        // .icon-caret-up:before             { content: "\uf0d8"; }
-        // .icon-caret-left:before           { content: "\uf0d9"; }
-        // .icon-caret-right:before          { content: "\uf0da"; }
-        // .icon-columns:before              { content: "\uf0db"; }
-        // .icon-sort:before                 { content: "\uf0dc"; }
-        // .icon-sort-down:before            { content: "\uf0dd"; }
-        // .icon-sort-up:before              { content: "\uf0de"; }
-
-        // .icon-envelope-alt:before         { content: "\uf0e0"; }
-        // .icon-linkedin:before             { content: "\uf0e1"; }
-        // .icon-undo:before                 { content: "\uf0e2"; }
-        // .icon-legal:before                { content: "\uf0e3"; }
-        // .icon-dashboard:before            { content: "\uf0e4"; }
-        // .icon-comment-alt:before          { content: "\uf0e5"; }
-        // .icon-comments-alt:before         { content: "\uf0e6"; }
-        // .icon-bolt:before                 { content: "\uf0e7"; }
-        // .icon-sitemap:before              { content: "\uf0e8"; }
-        // .icon-umbrella:before             { content: "\uf0e9"; }
-        // .icon-paste:before                { content: "\uf0ea"; }
-        // .icon-lightbulb:before            { content: "\uf0eb"; }
-        // .icon-exchange:before             { content: "\uf0ec"; }
-        // .icon-cloud-download:before       { content: "\uf0ed"; }
-        // .icon-cloud-upload:before         { content: "\uf0ee"; }
-
-        // .icon-user-md:before              { content: "\uf0f0"; }
-        // .icon-stethoscope:before          { content: "\uf0f1"; }
-        // .icon-suitcase:before             { content: "\uf0f2"; }
-        // .icon-bell-alt:before             { content: "\uf0f3"; }
-        // .icon-coffee:before               { content: "\uf0f4"; }
-        // .icon-food:before                 { content: "\uf0f5"; }
-        // .icon-file-alt:before             { content: "\uf0f6"; }
-        // .icon-building:before             { content: "\uf0f7"; }
-        // .icon-hospital:before             { content: "\uf0f8"; }
-        // .icon-ambulance:before            { content: "\uf0f9"; }
-        // .icon-medkit:before               { content: "\uf0fa"; }
-        // .icon-fighter-jet:before          { content: "\uf0fb"; }
-        // .icon-beer:before                 { content: "\uf0fc"; }
-        // .icon-h-sign:before               { content: "\uf0fd"; }
-        // .icon-plus-sign-alt:before        { content: "\uf0fe"; }
-
-        // .icon-double-angle-left:before    { content: "\uf100"; }
-        // .icon-double-angle-right:before   { content: "\uf101"; }
-        // .icon-double-angle-up:before      { content: "\uf102"; }
-        // .icon-double-angle-down:before    { content: "\uf103"; }
-        // .icon-angle-left:before           { content: "\uf104"; }
-        // .icon-angle-right:before          { content: "\uf105"; }
-        // .icon-angle-up:before             { content: "\uf106"; }
-        // .icon-angle-down:before           { content: "\uf107"; }
-        // .icon-desktop:before              { content: "\uf108"; }
-        // .icon-laptop:before               { content: "\uf109"; }
-        // .icon-tablet:before               { content: "\uf10a"; }
-        // .icon-mobile-phone:before         { content: "\uf10b"; }
-        // .icon-circle-blank:before         { content: "\uf10c"; }
-        // .icon-quote-left:before           { content: "\uf10d"; }
-        // .icon-quote-right:before          { content: "\uf10e"; }
-
-        // .icon-spinner:before              { content: "\uf110"; }
-        // .icon-circle:before               { content: "\uf111"; }
-        // .icon-reply:before                { content: "\uf112"; }
-        // .icon-github-alt:before           { content: "\uf113"; }
-        // .icon-folder-close-alt:before     { content: "\uf114"; }
-        // .icon-folder-open-alt:before      { content: "\uf115"; }
         text.appendChild(document.createTextNode(icons.music));
 
         function updateIcon(){
