--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
             fill: url(#stripey);
             text-anchor: middle;
         }
+
+        .shine{
+            fill: white;
+            fill-opacity: 0.2
     </style>
 </head>
 
 <body id="home">
 
 	<h1>Every Badge</h1>
-    <svg id="svg" width="100%" height="100%" viewBox="-300 -300 600 600">
+    <svg width="100%" height="100%" viewBox="-300 -300 600 600">
         <defs>
             <filter id="dropshadow" height="130%">
               <feGaussianBlur in="SourceAlpha" stdDeviation="3"/> <!-- stdDeviation is how much to blur -->
@@ -76,7 +80,9 @@
                 <stop offset="100%" style="stop-color: #F1743E" />
             </linearGradient>
         </defs>
-        <g id="svg" transform="translate(300,300)"></g>
+        <g id="svg">
+        </g>
+        <polygon class="shine" points="-550,-300 0,0, 550,-300" />
     </svg>
 
     <script>
